gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
 name: nginx
spec:
 controllerName: k8s.io/ingress-nginx
