http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
 name: argocd-route
 namespace: argocd
spec:
 parentRefs:
   - name: argocd-gateway
 rules:
   - matches:
       - path:
           type: PathPrefix
           value: /
     backendRefs:
       - name: argocd-server
         port: 80
